Prevent layout shift in mobile

--- a/app/frontend/stylesheets/application.css.scss
+++ b/app/frontend/stylesheets/application.css.scss
@@ -348,9 +348,3 @@ main {
     bottom: 60px !important;
   }
 }
-
-#social-links iconify-icon {
-  display: inline-block;
-  min-width: 50px;
-  min-height: 50px;
-}
